--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,11 @@ body {
   margin: 0px;
 }
 
+.loading-spinner {
+  padding: 20px;
+  font-size: 3rem;
+}
+
 a {
   text-decoration: none;
   color: black;
@@ -59,7 +64,12 @@ img {
   padding: 5px 20px;
 }
 
-button {
+.variant-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.variant-button {
   margin-top: 30px;
   border: none;
   background-color: #1e95ea;
@@ -67,6 +77,9 @@ button {
   height: 40px;
   width: 100px;
   font-size: 14px;
+}
+.variant-button-green {
+  background-color: green;
 }
 
 .disabledButton {
